--- a/src/components/portada.scss
+++ b/src/components/portada.scss
@@ -14,8 +14,18 @@ $naranja : #E3651B;
 		background-color:black;
 		z-index:1;
 		.scrolltext {
+			opacity:0;
 			position: absolute;
 			bottom: 10%;
 			left: 50%;
+			font-family: 'Bakbak One', cursive;
+		  }
+
+		  .studiotext{
+			opacity:0;
+			font-family: 'Bakbak One', cursive;
+			fill:$claro;
+			font-size:3em;
+
 		  }
     }
