--- a/src/components/changetexturescene.scss
+++ b/src/components/changetexturescene.scss
@@ -2,4 +2,13 @@
     width   : 100%;
     height  : 100%;
     touch-action: none;
+    cursor:all-scroll;
   }
+  .continue{
+
+    position: absolute;
+    transform-origin: center;
+    top: 73%;
+    left: 48%;
+
+}
