--- a/src/components/myModal.scss
+++ b/src/components/myModal.scss
@@ -11,11 +11,11 @@ $blue2 : #120DA6;
 
     position: absolute;
     top: 0;
-    background-color: black;
+    background-color: #0c0c0c;
     left: 0;
     width: 100vw;
     height: 100vh;
-    padding-top: 1em;
+    padding-top: 5em;
 
     .casilla{
         padding: 0px 25px;
