--- a/src/components/contacto.scss
+++ b/src/components/contacto.scss
@@ -1,7 +1,14 @@
+$purple1 : #3F1973;
+$purple2 : #1C0C40;
+$purple3 : #110826;
+$blue1 : #1811D9;
+$blue2 : #120DA6;
+
+
 .outputMessage {
   padding: 1em;
   color: #fff;
-  background-color: #313131;
+  background-color: $purple1;
   border-radius: 5px;
 }
 
@@ -22,7 +29,7 @@ clip-path: polygon(0% 4.25%, 5.2% 0%, 17.16% 0%, 22.57% 4.25%, 94% 4.25%, 100% 1
   }
 
   .outterShadow{
-    background-color: #aeff34;
+    background-color: $blue1;
     padding: 0.1em;
     clip-path: polygon(0% 4.25%, 5.2% 0%, 18.16% 0%, 23.57% 4.25%, 94% 4.25%, 100% 10.96%, 100% 94.5%, 94% 100%, 5.2% 100%, 0% 94.5%);
   }
@@ -44,15 +51,14 @@ clip-path: polygon(0% 4.25%, 5.2% 0%, 17.16% 0%, 22.57% 4.25%, 94% 4.25%, 100% 1
     margin-bottom: 0.5em;
   }
 
-  .sendBut {
-    background-color: #313131;
-    border-color: #313131;
-    color: rgb(223, 223, 223);
+  .sendBut{
+    background-color: $blue1!important;
+    color:white!important;
   }
 
   .sendBut:hover {
-    background-color: #adff2f;
-    color: black;
+    background-color: white!important;
+    color:$blue1!important;
   }
 
   .err{
