--- a/src/templates/stepsA.scss
+++ b/src/templates/stepsA.scss
@@ -1,13 +1,14 @@
 .stepContainer{
     background-color:#0c0c0c;
     //max-width:80vw!important;
-    .stepBanner{
-        //width:100%;
-        height:50vh;
-    }
-
+   
     .intro{
         font-size:1.2em;
+
+        img{
+            max-height:600px;
+            margin:2em;
+        }
     }
 
 }
